--- a/src/flow/netbeans/markdown/options/MarkdownPanel.form
+++ b/src/flow/netbeans/markdown/options/MarkdownPanel.form
@@ -301,22 +301,13 @@
             <DimensionLayout dim="0">
               <Group type="103" groupAlignment="0" attributes="0">
                   <Group type="102" attributes="0">
-                      <EmptySpace max="-2" attributes="0"/>
+                      <EmptySpace min="-2" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="0" attributes="0">
-                          <Group type="102" attributes="0">
-                              <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                                  <Component id="VIEW_HTML_ON_SAVE" max="32767" attributes="0"/>
-                                  <Component id="SAVE_IN_SOURCE_DIR" pref="255" max="32767" attributes="0"/>
-                              </Group>
-                              <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
-                          </Group>
-                          <Component id="FX_HTML_VIEW_ENABLED" alignment="0" pref="406" max="32767" attributes="0"/>
-                          <Group type="102" alignment="1" attributes="0">
-                              <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
-                              <Component id="FX_HTML_VIEW_WARNING_TEXT" min="-2" pref="385" max="-2" attributes="0"/>
-                          </Group>
+                          <Component id="FX_HTML_VIEW_ENABLED" alignment="0" min="-2" max="-2" attributes="0"/>
+                          <Component id="SAVE_IN_SOURCE_DIR" alignment="0" min="-2" max="-2" attributes="0"/>
+                          <Component id="VIEW_HTML_ON_SAVE" alignment="0" min="-2" max="-2" attributes="0"/>
                       </Group>
-                      <EmptySpace max="-2" attributes="0"/>
+                      <EmptySpace pref="203" max="32767" attributes="0"/>
                   </Group>
               </Group>
             </DimensionLayout>
@@ -329,9 +320,7 @@
                       <Component id="SAVE_IN_SOURCE_DIR" min="-2" max="-2" attributes="0"/>
                       <EmptySpace max="-2" attributes="0"/>
                       <Component id="FX_HTML_VIEW_ENABLED" min="-2" max="-2" attributes="0"/>
-                      <EmptySpace max="-2" attributes="0"/>
-                      <Component id="FX_HTML_VIEW_WARNING_TEXT" min="-2" pref="80" max="-2" attributes="0"/>
-                      <EmptySpace pref="174" max="32767" attributes="0"/>
+                      <EmptySpace pref="256" max="32767" attributes="0"/>
                   </Group>
               </Group>
             </DimensionLayout>
@@ -356,23 +345,6 @@
                 <Property name="text" type="java.lang.String" editor="org.netbeans.modules.i18n.form.FormI18nStringEditor">
                   <ResourceString bundle="flow/netbeans/markdown/options/Bundle.properties" key="MarkdownPanel.FX_HTML_VIEW_ENABLED.text" replaceFormat="org.openide.util.NbBundle.getMessage({sourceFileName}.class, &quot;{key}&quot;)"/>
                 </Property>
-              </Properties>
-            </Component>
-            <Component class="javax.swing.JTextPane" name="FX_HTML_VIEW_WARNING_TEXT">
-              <Properties>
-                <Property name="editable" type="boolean" value="false"/>
-                <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
-                  <Border info="null"/>
-                </Property>
-                <Property name="font" type="java.awt.Font" editor="org.netbeans.modules.form.editors2.FontEditor">
-                  <FontInfo relative="true">
-                    <Font component="FX_HTML_VIEW_WARNING_TEXT" italic="true" property="font" relativeSize="true" size="0"/>
-                  </FontInfo>
-                </Property>
-                <Property name="text" type="java.lang.String" editor="org.netbeans.modules.i18n.form.FormI18nStringEditor">
-                  <ResourceString bundle="flow/netbeans/markdown/options/Bundle.properties" key="MarkdownPanel.FX_HTML_VIEW_WARNING_TEXT.text" replaceFormat="org.openide.util.NbBundle.getMessage({sourceFileName}.class, &quot;{key}&quot;)"/>
-                </Property>
-                <Property name="opaque" type="boolean" value="false"/>
               </Properties>
             </Component>
           </SubComponents>
